k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edge-service
spec:
  selector:
    matchLabels:
      app: edge-service
  template:
    metadata:
      labels:
        app: edge-service
    spec:
      containers:
      - name: edge-service
        image: edge-service
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 9000
